# PostgreSQL_Data_Generator_Extension

./: .gitignore  README.md  adress.py  adress_generator.py  c_interaction.py  database_data_generator--1.0.sql  database_data_generator.c  database_data_generator.control  meson.build  my_new_extension--1.0.sql  my_new_extension.c  my_new_extension.control  personal_data.py  personal_generator.py  py_interaction.c  py_interaction.h  python_interface.c  python_interface.h
.github/workflows/: compile.yml  release.yml
subprojects/: .gitignore
test/expected/: basic.out
test/sql/: basic.sql
